# VR_selection_application

./: CMakeLists.txt
shader/: fragment.frag  vertex.vert
src/: main.cpp  main_server.cpp  mesh.cpp  mesh.h  ocTree.cpp  ocTree.h
